# m-proj

./: .gitignore  project.bib
dissertation/: abstract.tex  acknowledgements.tex  background.tex  conclusion.tex  declaration.tex  dissertation.tex  evaluation.tex  implementation.tex  introduction.tex  listings-mips.sty  rust.tex  titlepage.tex
presentation/: presentation.tex
proposal/: acs-proposal.tex
rust-patches-for-cheri/: 0001-Add-very-preliminary-support-for-cheri-128.patch  0002-librustc_target-cheri-update-data-layout-str-as-per-.patch  0003-remove-cheri-profile.patch  0004-config-force-Rust-to-always-use-atomic-ops-on-cheri-.patch  0005-codegen-register-AddrSpaceCast-128-bit-memset.patch  0006-codegen-ptr_to-call-LLVMPointerType-with-address-spa.patch  0007-wip-rustllvm-PassWrapper-always-use-purecap-abi.patch  0008-Revert-remove-cheri-profile.patch  0009-librustc_target-update-cheri-spec.patch  0010-librustc_target-abi-read-pointer-width-from-pf200.patch  0011-update-for-deprecated-idioms-new-crates.patch  0012-preliminary-support-for-128-bit-wide-pointers.patch  0013-target-mute-pointer-width-complaints.patch  0014-workaround-for-FunctionCallee-incompatibility.patch  0015-update-zeno-header-location.patch  0016-target-features-chericap-etc-from-clang.patch  0017-compiler-intrinsic-add-ptr_diff-LLVMBuildPtrDiff.patch  0018-codegen-inttoptr-cast-i128-i64-before-inttoptr.patch  0019-codegen-ptrtoint-cast-ptr-i64-zext-i128.patch  (+3 more)
test-progs/: smb  (+2 more)
test-progs/noc-hello/: Cargo.toml  Makefile  c.ll  main-opt.ll  main.ll
test-progs/noc-hello/src/: main.rs
(+77 files in other folders)
